--- a/DATA/ExploreData.ipynb
+++ b/DATA/ExploreData.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 🚗 Yad2 Car Price Prediction\n",
     "\n",
-    "This notebook explores and analyzes the Yad2 dataset to predict used car prices in Israel."
+    "This notebook explores and analyzes the Yad2 dataset to predict used car prices in Israel.\n"
    ]
   },
   {
@@ -17,12 +17,12 @@
    "source": [
     "## 📊 Data Exploration\n",
     "\n",
-    "We start by loading the dataset and inspecting its structure."
+    "We start by loading the dataset and inspecting its structure.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "c364d6f5",
    "metadata": {},
    "outputs": [
@@ -136,12 +136,12 @@
    "source": [
     "## 📈 Data Visualization\n",
     "\n",
-    "Let's visualize the price distribution and relationship with the year."
+    "Let's visualize the price distribution and relationship with the year.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "f7066ca0",
    "metadata": {},
    "outputs": [
@@ -193,12 +193,12 @@
    "source": [
     "## 🛠️ Data Cleaning\n",
     "\n",
-    "We clean the dataset by handling missing values, removing duplicates, and fixing incorrect values."
+    "We clean the dataset by handling missing values, removing duplicates, and fixing incorrect values.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "37c0f997",
    "metadata": {},
    "outputs": [
@@ -270,12 +270,12 @@
    "source": [
     "## 🗄️ Data to SQL Database\n",
     "\n",
-    "In this section, we will convert our cleaned dataset into a SQL database for easier querying and analysis."
+    "In this section, we will convert our cleaned dataset into a SQL database for easier querying and analysis.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "6a72dc03",
    "metadata": {},
    "outputs": [
@@ -297,11 +297,11 @@
     "# Connect to SQLite database (or create it if it doesn't exist)\n",
     "conn = sqlite3.connect(\"cars.db\")\n",
     "cursor = conn.cursor()\n",
-    "\n",
+    "# Drop the table if it exists\n",
+    "cursor.execute(\"DROP TABLE IF EXISTS cars\")\n",
     "# Create the table\n",
     "cursor.execute(\"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS cars (\n",
-    "        id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
     "        brand TEXT,\n",
     "        model TEXT,\n",
     "        year INTEGER,\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "e7d4f2d1",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
        "[15268 rows x 16 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,12 +666,12 @@
    "id": "1c88c970",
    "metadata": {},
    "source": [
-    "## 🔗 Connect to AWS RDS MySQL"
+    "## 🔗 Connect to AWS RDS MySQL\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "c3846579",
    "metadata": {},
    "outputs": [
@@ -725,12 +725,12 @@
    "id": "125b6c00",
    "metadata": {},
    "source": [
-    "## 🔄 Insert Data into AWS RDS MySQL"
+    "## 🔄 Insert Data into AWS RDS MySQL\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "8a660dd0",
    "metadata": {},
    "outputs": [
@@ -740,18 +740,40 @@
      "text": [
       "🗑️ All previous data deleted from AWS RDS!\n",
       "✅ 15268 rows successfully transferred to AWS RDS!\n",
-      "🔢 Number of rows in AWS RDS MySQL table: 15268\n"
+      "🔢 Number of rows in AWS RDS MySQL table: 15268\n",
+      "['id', 'brand', 'model', 'year', 'hand_num', 'horse_power', 'engine_volume', 'fuel_type', 'car_age', 'price', 'magnesium_wheels', 'distance_control', 'economical', 'adaptive_cruise_control', 'cruise_control', 'four_wheel_drive', 'brand_group']\n",
+      "(1, 'Mercedes', 'A-Class', 2022, 1, 160.0, 1.3, 'hybrid', 3, 210000.0, 0, 0, 0, 0, 0, 0, 'Luxury')\n",
+      "(2, 'Alfa Romeo', 'Giulia', 2018, 1, 197.0, 2.0, 'petrol', 7, 92400.0, 1, 1, 1, 0, 0, 0, 'Other')\n",
+      "(3, 'Toyota', 'Sequoia', 2008, 4, 381.0, 5.8, 'petrol', 17, 120000.0, 0, 0, 0, 0, 0, 1, 'Budget')\n",
+      "(4, 'Hyundai', 'Santa Fe', 2017, 1, 192.0, 2.4, 'petrol', 8, 92500.0, 1, 1, 0, 0, 0, 1, 'Budget')\n",
+      "(5, 'Skoda', 'Karoq', 2018, 2, 115.0, 1.0, 'petrol', 7, 82300.0, 1, 1, 0, 1, 1, 0, 'Budget')\n",
+      "(6, 'Skoda', 'Karoq', 2019, 2, 150.0, 1.5, 'petrol', 6, 99000.0, 1, 1, 0, 1, 1, 0, 'Budget')\n",
+      "(7, 'Hyundai', 'i20', 2020, 2, 100.0, 1.0, 'petrol', 5, 74000.0, 0, 1, 0, 0, 0, 0, 'Budget')\n",
+      "(8, 'Renault', 'Clio Estate', 2016, 3, 118.0, 1.2, 'petrol', 9, 27800.0, 1, 1, 1, 0, 0, 0, 'Budget')\n",
+      "(9, 'Jeep', 'Compass', 2021, 1, 150.0, 1.3, 'petrol', 4, 129000.0, 1, 1, 0, 1, 1, 0, 'Other')\n",
+      "(10, 'Seat', 'Leon', 2018, 5, 290.0, 2.0, 'petrol', 7, 105000.0, 1, 0, 1, 0, 0, 0, 'Budget')\n"
      ]
     }
    ],
    "source": [
     "import sqlite3\n",
     "import mysql.connector\n",
+    "import pandas as pd\n",
     "\n",
     "# Connect to SQLite and fetch ALL data\n",
     "conn_sqlite = sqlite3.connect(\"cars.db\")\n",
     "df = pd.read_sql(\"SELECT * FROM cars\", conn_sqlite)  # ⬅️ Fetch all rows\n",
     "conn_sqlite.close()\n",
+    "\n",
+    "# Reorder DataFrame columns to match the SQL INSERT order\n",
+    "ordered_columns = [\n",
+    "    'brand', 'model', 'year', 'hand_num', 'horse_power', \n",
+    "    'engine_volume', 'fuel_type', 'car_age', 'price', \n",
+    "    'magnesium_wheels', 'distance_control', 'economical', \n",
+    "    'adaptive_cruise_control', 'cruise_control', 'four_wheel_drive', \n",
+    "    'brand_group'\n",
+    "]\n",
+    "df = df[ordered_columns]\n",
     "\n",
     "# Reconnect to AWS RDS MySQL\n",
     "conn_rds = mysql.connector.connect(\n",
@@ -762,8 +784,11 @@
     ")\n",
     "cursor_rds = conn_rds.cursor()\n",
     "\n",
-    "# Step 1: DELETE all existing data before inserting new records\n",
-    "cursor_rds.execute(\"DELETE FROM cars\")\n",
+    "# Ensure no pending transaction is locking the table\n",
+    "conn_rds.rollback()\n",
+    "\n",
+    "# Step 1: TRUNCATE the table to quickly remove all data\n",
+    "cursor_rds.execute(\"TRUNCATE TABLE cars\")\n",
     "conn_rds.commit()\n",
     "print(\"🗑️ All previous data deleted from AWS RDS!\")\n",
     "\n",
@@ -782,10 +807,20 @@
     "# Commit the transaction\n",
     "conn_rds.commit()\n",
     "print(f\"✅ {cursor_rds.rowcount} rows successfully transferred to AWS RDS!\")\n",
+    "\n",
     "# Verify the number of rows in the AWS RDS MySQL table\n",
     "cursor_rds.execute(\"SELECT COUNT(*) FROM cars\")\n",
     "row_count = cursor_rds.fetchone()[0]\n",
     "print(f\"🔢 Number of rows in AWS RDS MySQL table: {row_count}\")\n",
+    "\n",
+    "# Fetch and print the first few rows from the AWS RDS MySQL table\n",
+    "cursor_rds.execute(\"SELECT * FROM cars LIMIT 10\")\n",
+    "rows = cursor_rds.fetchall()\n",
+    "column_names = [desc[0] for desc in cursor_rds.description]\n",
+    "print(column_names)\n",
+    "for row in rows:\n",
+    "    print(row)\n",
+    "\n",
     "# Close connections\n",
     "cursor_rds.close()\n",
     "conn_rds.close()\n"
